--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,11 @@ dependencies {
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
 
     implementation("javax.inject:javax.inject:1")
+
+    implementation("com.squareup.okhttp3:logging-interceptor:4.9.3")
+
 }
