--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id  'kotlin-android-extensions'
+    id 'kotlin-kapt'
 }
 android {
     compileSdk 31
@@ -56,5 +57,9 @@ dependencies {
     implementation("javax.inject:javax.inject:1")
 
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.3")
+
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    kapt('com.github.bumptech.glide:compiler:4.12.0')
 
 }
